# vulkan_experiments

./: .gitmodules  CMakeLists.txt  main.cpp
assets/shaders/: triangle.frag  triangle.vert
core/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  DescriptorBinding.hpp  Mesh.hpp  Shader.hpp  Texture.hpp
render/vulkan/: VulkanBackend.cpp  VulkanBackend.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanMesh.cpp  VulkanMesh.hpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanShader.cpp  VulkanShader.hpp
